overflow fix

--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -8,6 +8,7 @@ body {
   align-items: center;
   margin: 0;
   justify-content: flex-start;
+  overflow:hidden;
 }
 
 #main-img {
